--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "eslint-config-next": "13.4.4",
     "headlessui": "^0.0.0",
     "next": "13.4.4",
+    "particles.js": "^2.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-particles": "^2.10.1",
+    "react-tsparticles": "^2.10.1",
     "tailwindcss": "3.3.2",
+    "tsparticles": "^2.10.1",
     "typescript": "5.0.4"
   }
 }
