--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "headlessui": "^0.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-particles": "^2.10.1",
