--- a/public/utils/particlesjs-config.json
+++ b/public/utils/particlesjs-config.json
@@ -49,13 +49,13 @@
       "enable": true,
       "distance": 90,
       "color": "#000000",
-      "opacity": 0.5,
-      "width": 1
+      "opacity": 0.3,
+      "width": 0.5
     },
     "move": {
       "enable": true,
       "speed": 3,
-      "direction": "bottom",
+      "direction": "bottom right",
       "random": false,
       "straight": false,
       "out_mode": "out",
@@ -95,7 +95,7 @@
         "speed": 3
       },
       "repulse": {
-        "distance": 231.76823176823177,
+        "distance": 300.76823176823177,
         "duration": 0.4
       },
       "push": {
