--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.9.0",
     "react-particles": "^2.10.1",
     "react-tsparticles": "^2.10.1",
+    "sweetalert2": "^11.7.12",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.10.1",
     "typescript": "5.0.4"
