--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sweetalert2": "^11.7.12",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.10.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "typewriter-effect": "^2.20.1"
   }
 }
