--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "headlessui": "^0.0.0",
+    "i": "^0.3.7",
     "next": "13.4.4",
+    "npm": "^9.8.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
